// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountList reducer should handle INVENTORY_ACCOUNT_STATUS_POLLING 1`] = `
Object {
  "accounts": Object {
    "Account1": Object {
      "generate_report_status": "running",
      "upload_report_status": "running",
    },
    "Account2": Object {
      "generate_report_status": "failure",
      "upload_report_status": "unknown",
    },
    "Account3": Object {
      "generate_report_status": "running",
      "upload_report_status": "success",
    },
  },
  "error": null,
  "pollingProcessID": 0,
}
`;

exports[`AccountList reducer should handle INVENTORY_ACCOUNT_STATUS_POLLING_ERROR 1`] = `
Object {
  "accounts": Object {},
  "error": "some-error",
  "pollingProcessID": 0,
}
`;

exports[`AccountList reducer should handle INVENTORY_ACCOUNT_STATUS_POLLING_START 1`] = `
Object {
  "accounts": Object {},
  "error": null,
  "pollingProcessID": 0,
}
`;

exports[`AccountList reducer should handle INVENTORY_ACCOUNT_STATUS_POLLING_STOP 1`] = `
Object {
  "accounts": Object {},
  "error": null,
  "pollingProcessID": 0,
}
`;

exports[`AccountList reducer should handle INVENTORY_PROCESS_RESTART 1`] = `
Object {
  "accounts": Object {
    "user@redhat.com": Object {
      "upload_report_status": "Restarting...",
    },
  },
  "error": null,
  "pollingProcessID": 0,
}
`;

exports[`AccountList reducer should return the initial state 1`] = `
Object {
  "accounts": Object {},
  "error": null,
  "pollingProcessID": 0,
}
`;
